# jito-ncn-program

./: CNAME  Cargo.toml  README.md  settlement_program-keypair.json
.config/: nextest.toml
.github/workflows/: ci.yml
cli/src/: args.rs  bls_keys.rs  getters.rs  handler.rs  instructions.rs  log.rs
cli/src/keeper/: keeper_loop.rs
clients/js/ncn_program/accounts/: config.ts  index.ts  snapshot.ts  vaultRegistry.ts
clients/js/ncn_program/errors/: ncnProgram.ts
clients/js/ncn_program/instructions/: adminRegisterStMint.ts  adminSetParameters.ts  index.ts  removeOperator.ts  snapshotVaultOperatorDelegation.ts  updateOperatorIpPort.ts  verifyCertificate.ts
clients/js/ncn_program/programs/: ncnProgram.ts
clients/js/ncn_program/types/: index.ts  operatorSnapshot.ts  stMintEntry.ts  vaultContribution.ts
core/src/: certificate.rs  config.rs  constants.rs  discriminators.rs  error.rs  g1_point.rs  g2_point.rs  instruction.rs  lib.rs  privkey.rs  snapshot.rs  utils.rs  vault_registry.rs
core/src/schemes/: mod.rs  sha256_normalized.rs  traits.rs
docs/: CI.md  INTERFACES.md  KNOWN-FLAKES.md  PARITY-PLAN.md  dmsg-stateless-verify-slides.html
frontend/: README.md  config.json  index.html  smoke.mjs
idl/: ncn_program.json
integration_tests/tests/fixtures/: mod.rs  ncn_program_client.rs  restaking_client.rs  test_builder.rs  vault_client.rs
integration_tests/tests/ncn_program/: admin_set_parameters.rs  cast_vote.rs  fuzz_simulation_tests.rs  initialize_operator_snapshot.rs  initialize_snapshot.rs  meta_tests.rs  mod.rs  multi_vault.rs  register_operator.rs  remove_operator.rs  restaking_variations.rs  simulation_test.rs  snapshot_vault_operator_delegation.rs  update_operator_bn128_keys.rs  update_operator_ip_port.rs  verify_certificate.rs
llm_payload_producer/: Cargo.toml
llm_payload_producer/fixtures/: qwen06_capital_of_france.json  tell_story_once_upon_a_time.json
llm_payload_producer/src/: lib.rs  main.rs
llm_payload_producer/tests/: qwen_fixture.rs  real_fixture.rs
program/: Cargo.toml
program/src/: admin_register_st_mint.rs  admin_set_parameters.rs  cast_vote.rs  lib.rs  register_operator.rs  remove_operator.rs  snapshot_vault_operator_delegation.rs  update_operator_bn128_keys.rs  verify_certificate.rs
scripts/: build_fixtures.sh
settlement_core/: Cargo.toml
settlement_core/src/: buffer.rs  error.rs  instruction.rs  lib.rs  payload.rs  state.rs
settlement_program/: Cargo.toml
settlement_program/src/: close_buffer.rs  emit_event.rs  initialize_state.rs  lib.rs  settle.rs  system.rs  verify.rs  write_buffer.rs
settlement_program/tests/: settlement_tests.rs
settlement_program/tests/fixtures/: mod.rs  settlement_client.rs  settlement_test_builder.rs
shank_cli/src/: main.rs
